avoid line breaks in destination field

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -342,6 +342,7 @@ div.app {
 				bottom:0;
 				left:4em;
 				width: 70%;
+				white-space: nowrap;
 				overflow: hidden;
 				color: $fg;
 			}
